--- a/.github/workflows/Deploy_Test_Umbraco.yml
+++ b/.github/workflows/Deploy_Test_Umbraco.yml
@@ -14,9 +14,8 @@ jobs:
 
     steps:
      
-      - name: Checkout
-        uses: actions/checkout@v2.6.0
-     
+      - uses: actions/checkout@v3
+
       - name: Look files
         run: ls
         
