--- a/.github/workflows/Deploy_Test_Umbraco.yml
+++ b/.github/workflows/Deploy_Test_Umbraco.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ASP-app
-          path: '/'
+          path: '**'
         
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
