--- a/.github/workflows/Deploy_Test_Umbraco.yml
+++ b/.github/workflows/Deploy_Test_Umbraco.yml
@@ -32,5 +32,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
          app-name: 'test-web-app-umbraco'
-         publish-profile: ${{ secrets.AzureAppService_PublishProfile_2d95d6e7ec3a4657983746cbfc4f4d9a }}
+         publish-profile: ${{ secrets.AZURE_SUBSCRIBE_ID }}
          package: .
