--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,11 @@
       }
     }
   },
+  
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Server=tcp:umbraco-server-sql-01.database.windows.net,1433;Initial Catalog=umbraco-sqldb;Persist Security Info=False;User ID=umbraco-admin;Password=GmPvB2ru;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  
   "Umbraco": {
     "CMS": {
       "Global": {
