default connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   },
   
   "ConnectionStrings": {
-    "umbracoDbDSN": "Server=tcp:umbraco-server-sql-01.database.windows.net,1433;Initial Catalog=umbraco-sqldb;Persist Security Info=False;User ID=umbraco-admin;Password=GmPvB2ru;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "umbracoDbDSN": "Server=tcp:umbraco-server-sql-01.database.windows.net,1433;Initial Catalog=test;Persist Security Info=False;User ID=test;Password=test;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   
   "Umbraco": {
